scss/custom.scss
// Share Modal
// *------------------------------------------------*
button.invite, button.new-topic {
  display: none;
}

// Header
// *------------------------------------------------*

// hide the icon on the login button
button.login-button > .d-icon-user {
  display: none;
}

.custom-header-links li.headerLink a {
  padding: .6em 1em;
  background-color: #ffef3f;
  filter: drop-shadow(0px 0px 4px rgb(33 33 33 / 15%));
  border-radius: 4px;
}

li.search-dropdown {
  display: none;
}

// Topic Header
// *------------------------------------------------*
.category-breadcrumb {
  display: none;
}

#navigation-bar {
  display: none;
}

// Accent
// *------------------------------------------------*
#main-outlet-wrapper #main-outlet {
  border-top: 8px solid #e9e9e9;
}

// About
// *------------------------------------------------*
section.about.description {
  margin-bottom: 0;
}

section.about.stats {
  display: none;
}

// Nav
// *------------------------------------------------*

.sidebar-section[data-section-name=messages], .sidebar-section[data-section-name=tags] {
  display: none;
}

.sidebar-section-link-wrapper[data-list-item-name=all-categories] {
  display: none;
}

.sidebar-footer-container {
  justify-content: center;
}

.sidebar-section-wrapper .sidebar-section-header-wrapper {
  display: none;
}

// Category
// *------------------------------------------------*
.category-box .category-logo.aspect-image img {
  height: var(--max-height) !important;
  width: var(--max-height) !important;
}

.topic-list-bottom > .footer-message {
  display: none !important;
}

.category-boxes .subcategories {
  display: none;
}

// Gated Topic
// *------------------------------------------------*
.custom-gated-topic-container {
  background-color: #ffef3f;
}

.custom-gated-topic-content--cta__signup > button.sign-up-button {
  // should we change the background color of the button? (it's yellow on yellow with gray hover)
}

// Subscriptions
// *------------------------------------------------*
// this fixes an override in common.scss:176
.subscribe-buttons .btn.btn-primary {
  color: var(--secondary);
  background-color: var(--tertiary);
  &:hover,
  &.btn-hover {
    background-color: #666666;
    color: #ffffff;
  }
}

// Global
// *------------------------------------------------*
// override tertiary color for links
// but don't set this too strongly (e.g. !important) as links in other areas may be colored differently
a, a:visited {
  color: #0055ff;
}

// *------------------------------------------------*
// MOBILE
// *------------------------------------------------*

.login-welcome-header img {
  display: none;
}

.login-welcome-header p {
  display: none;
}

tr.category-topic-link {
  display: none;
}

footer.category-topics-count {
  display: none;
}

